--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: clocks
-description: A new Flutter package project.
+description: Clock widgets
 version: 0.0.1
-homepage:
+homepage: https://github.com/gerardggf/clocks
 
 environment:
   sdk: ">=3.1.3 <4.0.0"
